Translated new sentences

--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -1999,11 +1999,11 @@
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
  	 	 	"descriptionV2": {
- 	 	 	 	"trans": "Gli articoli qui verranno spostati automaticamente al tuo inventario una volta che avrai abbastanza spazio.",
+ 	 	 	 	"trans": "Gli aoggetti qui presenti verranno spostati automaticamente al tuo inventario una volta che avrai abbastanza spazio.",
  	 	 	 	"eng": "Items here will be automatically moved to your inventory once you have enough space."
  	 	 	},
  	 	 	"descriptionV3": {
- 	 	 	 	"trans": "Verrà visualizzata solo una parte dell'elenco completo se hai troppi elementi nella tua casella di posta.",
+ 	 	 	 	"trans": "Verrà visualizzata solo una parte dell'elenco completo se hai troppi oggetti nella tua casella.",
  	 	 	 	"eng": "Only part of the full list will be displayed if you have too many items in your inbox."
  	 	 	},
  	 	 	"expiryDisplay": {
@@ -2018,11 +2018,11 @@
  	 	 	 	"eng": "There is no item in your item inbox"
  	 	 	},
  	 	 	"tooManyItems": {
- 	 	 	 	"trans": "Potrebbero esserci più elementi nella tua casella di posta, ma hai troppi elementi nella tua casella di posta per visualizzarli tutti.",
+ 	 	 	 	"trans": "Potrebbero esserci altri oggetti nella tua casella di posta, ma ne hai troppi per visualizzarli tutti.",
  	 	 	 	"eng": "There might be more items in your inbox, but you have too many items in your inbox to display them all."
  	 	 	},
  	 	 	"getAllItems": {
- 	 	 	 	"trans": "Ottieni tutti gli oggetti",
+ 	 	 	 	"trans": "Prendi tutti gli oggetti",
  	 	 	 	"eng": "Get All Items"
  	 	 	}
  	 	},
@@ -2046,7 +2046,7 @@
  	 	},
  	 	"login": {
  	 	 	"loginButton": {
- 	 	 	 	"trans": "Login",
+ 	 	 	 	"trans": "login",
  	 	 	 	"eng": "Login"
  	 	 	},
  	 	 	"forgotPassword": {
@@ -2054,7 +2054,7 @@
  	 	 	 	"eng": "Forgot Password?"
  	 	 	},
  	 	 	"registerPageButton": {
- 	 	 	 	"trans": "Registrarsi?",
+ 	 	 	 	"trans": "Registrazione",
  	 	 	 	"eng": "Create Account?"
  	 	 	}
  	 	},
@@ -2105,7 +2105,7 @@
  	 	 	 	"eng": "remove"
  	 	 	},
  	 	 	"notIdle": {
- 	 	 	 	"trans": "Devi essere inattivo per fare questa azione",
+ 	 	 	 	"trans": "Non devi eseguire attività per fare questa azione",
  	 	 	 	"eng": "You must be idle to do this action"
  	 	 	},
  	 	 	"noItem": {
@@ -2127,7 +2127,7 @@
  	 	 	"deleteAccount": {
  	 	 	 	"input": {
  	 	 	 	 	"label": {
- 	 	 	 	 	 	"trans": "Elimina l'account",
+ 	 	 	 	 	 	"trans": "Elimina account",
  	 	 	 	 	 	"eng": "Delete Account"
  	 	 	 	 	},
  	 	 	 	 	"placeholder": {
@@ -2136,7 +2136,7 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "Elimina l'account",
+ 	 	 	 	 	"trans": "Elimina account",
  	 	 	 	 	"eng": "Delete Account"
  	 	 	 	}
  	 	 	},
@@ -2506,7 +2506,7 @@
  	"battleUI": {
  	 	"quickSlotModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "Seleziona un elemento per legare a Quick Slot",
+ 	 	 	 	"trans": "Seleziona un oggetti da associare allo slot rapido",
  	 	 	 	"eng": "Select an item to bind to quick slot"
  	 	 	}
  	 	}
@@ -2835,7 +2835,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"diff"
  	 	 	 	],
- 	 	 	 	"trans": "Dispositivo inaccurato (differenza di tempo: ${diff}). Per garantire che funzionalità di gioco come Buff, Time Skip e AFK Attività vengono visualizzate correttamente. Si prega di sincronizzare il tempo del dispositivo con la rete e assicurarsi che la zona temporale sia impostata correttamente",
+ 	 	 	 	"trans": "Orario del dispositivo impreciso (differenza temporale: ${diff}). Per garantire che funzionalità di gioco come Potenziamenti, Skip Globali e Attività AFK vengano visualizzate correttamente, sincronizza l'orario del dispositivo con la rete e assicurati che il fuso orario sia impostata correttamente",
  	 	 	 	"eng": "Inaccurate device time (time difference: ${diff}). to ensure game features such as buff, time skip and AFK Task display correctly. Please sync your device time with network and ensure your time-zone is set correctly"
  	 	 	}
  	 	}
@@ -3094,21 +3094,21 @@
  	 	 	"eng": "You have logged in on another device"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Se desideri continuare a giocare su questo dispositivo, fai clic su Reconnect.",
+ 	 	 	"trans": "Se desideri continuare a giocare su questo dispositivo, fai clic su Riconnettiti.",
  	 	 	"eng": "If you wish to continue playing on this device, please click reconnect."
  	 	},
  	 	"restartApp": {
- 	 	 	"trans": "Riconnettersi ora",
+ 	 	 	"trans": "Riconnettiti ora",
  	 	 	"eng": "Reconnect Now"
  	 	}
  	},
  	"slider": {
  	 	"min": {
- 	 	 	"trans": "Min",
+ 	 	 	"trans": "min",
  	 	 	"eng": "Min"
  	 	},
  	 	"max": {
- 	 	 	"trans": "max",
+ 	 	 	"trans": "Max",
  	 	 	"eng": "max"
  	 	}
  	},
@@ -4456,7 +4456,7 @@
  	 	 	 	"eng": "Supply Crate [Gang]"
  	 	 	},
  	 	 	"descriptionv2": {
- 	 	 	 	"trans": "Contiene oggetti e risorse misc che una banda può rimanere funzionale. \r\n         Può essere usato nel quartier generale della tua banda",
+ 	 	 	 	"trans": "Contiene oggetti e risorse di vario genere necessari a una gang per rimanere operativa. \r\n         Può essere usato nel Quartier Generale della tua gang",
  	 	 	 	"eng": "Contains misc items and resources for a gang to stay functional.\r\n        Can be used in your gang headquarters"
  	 	 	}
  	 	},
@@ -4696,7 +4696,7 @@
  	 	},
  	 	"rngInterferer": {
  	 	 	"name": {
- 	 	 	 	"trans": "Interferente RNG",
+ 	 	 	 	"trans": "Interferenza RNG",
  	 	 	 	"eng": "RNG Interferer"
  	 	 	},
  	 	 	"descriptionv3": {
@@ -5982,7 +5982,7 @@
  	},
  	"incorrectTimeModal": {
  	 	"title": {
- 	 	 	"trans": "Tempo inaccurato del dispositivo",
+ 	 	 	"trans": "Orario del dispositivo impreciso",
  	 	 	"eng": "Inaccurate Device Time"
  	 	},
  	 	"confirm": {
@@ -5990,7 +5990,7 @@
  	 	 	"eng": "Ok"
  	 	},
  	 	"cancel": {
- 	 	 	"trans": "Come sincronizzare il tempo del dispositivo?",
+ 	 	 	"trans": "Come sincronizzare l'orario del dispositivo?",
  	 	 	"eng": "How to sync device time?"
  	 	}
  	},
@@ -6019,11 +6019,11 @@
  	 	 	 	"level",
  	 	 	 	"dungeonInvite"
  	 	 	],
- 	 	 	"trans": "Hey ragazzi! Unisciti al mio dungeon [${type}] (lv ${level}) ==> ${dungeonInvite}",
+ 	 	 	"trans": "Hey ragazzi! Unitevi al mio dungeon [${type}] (lv ${level}) ==> ${dungeonInvite}",
  	 	 	"eng": "Hey guys! join my dungeon [${type}](lv${level}) ==> ${dungeonInvite}"
  	 	},
  	 	"shareDungeonCooldown": {
- 	 	 	"trans": "Si prega di attendere prima di inviare un altro invito",
+ 	 	 	"trans": "Devi attendere prima di inviare un altro invito",
  	 	 	"eng": "Please wait before sending another invite"
  	 	},
  	 	"normal": {
@@ -6098,11 +6098,11 @@
  	 	},
  	 	"shareDungeonModal": {
  	 	 	"title": {
- 	 	 	 	"trans": "Condividi Dungeon per chattare?",
+ 	 	 	 	"trans": "Condividi il dungeon in chat?",
  	 	 	 	"eng": "Share Dungeon to chat?"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Puoi condividere il tuo dungeon attuale per chattare.",
+ 	 	 	 	"trans": "Puoi condividere il tuo dungeon attuale in chat.",
  	 	 	 	"eng": "You can share your current dungeon to chat."
  	 	 	},
  	 	 	"cancel": {
@@ -6115,7 +6115,7 @@
  	 	 	}
  	 	},
  	 	"shareDungeon": {
- 	 	 	"trans": "Condividere",
+ 	 	 	"trans": "Condividi",
  	 	 	"eng": "Share"
  	 	},
  	 	"buttonTut": {
@@ -6342,7 +6342,7 @@
  	},
  	"mobile": {
  	 	"returnToAppMessage": {
- 	 	 	"trans": "Sincronizzazione con il server ..",
+ 	 	 	"trans": "Sincronizzazione con il server...",
  	 	 	"eng": "Syncing with server.."
  	 	}
  	},
@@ -7052,26 +7052,26 @@
  	},
  	"forgotPasswordPage": {
  	 	"title": {
- 	 	 	"trans": "Inserisci la tua e -mail, il sistema ti invierà un'e -mail di reimposta",
+ 	 	 	"trans": "Inserisci la tua e-mail, il sistema ti invierà un'e-mail per reimpostare la password",
  	 	 	"eng": "Enter your email, the system will send a reset password email to you"
  	 	},
  	 	"emailRequired": {
- 	 	 	"trans": "È richiesta la posta elettronica",
+ 	 	 	"trans": "Il campo E-mail è richiesto",
  	 	 	"eng": "Email is required"
  	 	},
  	 	"sendEmail": {
- 	 	 	"trans": "Invia una email",
+ 	 	 	"trans": "Invia una e-mail",
  	 	 	"eng": "Send Email"
  	 	},
  	 	"emailSent": {
  	 	 	"vars": [
  	 	 	 	"email"
  	 	 	],
- 	 	 	"trans": "Un'e -mail di reimpostazione della password è stata inviata a {email}",
+ 	 	 	"trans": "Un'e-mail di reimpostazione della password è stata inviata a {email}",
  	 	 	"eng": "An password reset email has been sent to {email}"
  	 	},
  	 	"checkEmail": {
- 	 	 	"trans": "Controlla la tua e -mail e segui le istruzioni per reimpostare la password",
+ 	 	 	"trans": "Controlla la tua e-mail e segui le istruzioni per reimpostare la password",
  	 	 	"eng": "Please check your email and follow the instructions to reset the password"
  	 	}
  	},
